# MediClinic

./: Appointment.cpp  Appointment.h  CMakeLists.txt  Doctor.cpp  Doctor.h  HospitalManagementSystem.cpp  HospitalManagementSystem.h  Nurse.cpp  Nurse.h  Patient.cpp  Patient.h  README.md  main.cpp
